--- a/Portifolio.html
+++ b/Portifolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portifólio - Tiago Leonardo Schroeder</title>
+    <script src="https://kit.fontawesome.com/19449ccf1e.js" crossorigin="anonymous"></script>
     <link rel="Stylesheet" href="estilo.css">
 </head>
 <body>
@@ -15,12 +16,15 @@
 
     <div class="botoes">
         <button class="botao">
+            <i class="fa-brands fa-linkedin"></i>
             <a href="https://www.linkedin.com/in/tiago-leonardo-schroeder-44200a241/">Linkedin</a>
         </button>
         <button class="botao">
+            <i class="fa-brands fa-github"></i>
             <a href="https://github.com/TiagoLeoSchroeder">Github</a>
         </button>
         <button class="botao">
+            <i class="fa-solid fa-file-pdf"></i>
             <a href="#">Currículo</a>
         </button>
     </div>
