--- a/Portifolio.html
+++ b/Portifolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="text-container-1">👋 Prazer, sou Tiago Leonardo Schroeder</p>
+        <p class="text-container-1">👋 Prazer, sou o Tiago</p>
         <h3 class="text-container-2">FRONTEND</h3>
         <h1 class="text-container-3">DEVELOPER</h1>
         <p class="text-container-4">Tenho 19, sou desenvolvedor frontend sem experiêcia profissional</p>
