--- a/Portifolio.html
+++ b/Portifolio.html
@@ -11,7 +11,7 @@
         <p class="text-container-1">👋 Prazer, sou o Tiago</p>
         <h3 class="text-container-2">FRONTEND</h3>
         <h1 class="text-container-3">DEVELOPER</h1>
-        <p class="text-container-4">Tenho 19 anos, sou desenvolvedor frontend sem experiêcia profissional</p>
+        <p class="text-container-4">Tenho 19 anos, sou desenvolvedor frontend sem experiência profissional</p>
     </div>
 
     <div class="botoes">
