--- a/Portifolio.html
+++ b/Portifolio.html
@@ -25,7 +25,7 @@
         </button>
         <button class="botao">
             <i class="fa-solid fa-file-pdf"></i>
-            <a href="#">Currículo</a>
+            <a href="Currículo de Tiago Leonardo Schroeder.pdf" download>Currículo</a>
         </button>
     </div>
    
