--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Portifólio - Tiago Leonardo Schroeder</title>
     <script src="https://kit.fontawesome.com/19449ccf1e.js" crossorigin="anonymous"></script>
-    <link rel="Stylesheet" href="estilo.css">
+    <link rel="Stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
