--- a/home.html
+++ b/home.html
@@ -27,6 +27,10 @@
             <i class="fa-solid fa-file-pdf"></i>
             <a href="Currículo de Tiago Leonardo Schroeder.pdf" download>Ver Currículo</a>
         </button>
+        <button class="botao">
+            <i class="fa-solid fa-file"></i>
+            <a href="#">Projetos</a>
+        </button>
     </div>
    
 </body>
