--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/19449ccf1e.js" crossorigin="anonymous"></script>
     <link rel="Stylesheet" href="style.css">
 </head>
-<body>    
+<body class="gradient">    
     <div class="container">
         <p class="text-container-1">👋 Prazer, sou o Tiago</p>
         <h3 class="text-container-2">FRONTEND</h3>
