--- a/home.html
+++ b/home.html
@@ -11,7 +11,10 @@
         <p class="text-container-1">👋 Prazer, sou o Tiago</p>
         <h3 class="text-container-2">FRONTEND</h3>
         <h1 class="text-container-3">DEVELOPER</h1>
-        <p class="text-container-4">Tenho 19 anos, sou desenvolvedor frontend sem experiência profissional</p>
+        <p class="text-container-4">Tenho 19 anos, sou desenvolvedor frontend sem experiência profissional 
+            <br>
+                e com aptidão para descobrir coisas tecnologias novas.
+        </p>
     </div>
 
     <div class="botoes">
