--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
         <p class="text-container-1">👋 Prazer, sou o Tiago</p>
         <h3 class="text-container-2">FRONTEND</h3>
         <h1 class="text-container-3">DEVELOPER</h1>
-        <p class="text-container-4">Tenho 19 anos, sou desenvolvedor frontend sem experiência profissional 
+        <p class="text-container-4">Tenho 19 anos, sou desenvolvedor frontend sem experiência profissional e com aptidão para
             <br>
-                e com aptidão para descobrir coisas tecnologias novas.
+                 descobrir coisas novas tecnologias.
         </p>
     </div>
 
