--- a/home.html
+++ b/home.html
@@ -6,8 +6,7 @@
     <script src="https://kit.fontawesome.com/19449ccf1e.js" crossorigin="anonymous"></script>
     <link rel="Stylesheet" href="style.css">
 </head>
-<body id="corpo">
-    <div id="newBackground">
+<body>
     <div class="wrapper">
         <div class="box">
             <div></div>
@@ -56,7 +55,6 @@
             <h2 class="subtexto4">Sobre mim</h2>
         </button>
     </div>
-</div>
 
     <script src="script.js"></script>
 </body>
