--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
             <i class="fa-solid fa-file"></i>
             <h2 class="subtexto3">Projetos</h2>
         </button>
-        <button type="button" class="botao" onclick="IrParaPagina()">
+        <button type="button" class="botao" onclick="SobreMim()">
             <i class="fa-solid fa-user"></i>
             <h2 class="subtexto4">Sobre mim</h2>
         </button>
