--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <div class="loader" id="loading"></div>
         
     <p>👋 Oi, sou Tiago</p>
-    <h1 class="texto1">FRONTEND</h1>
+    <h1 class="texto1">SOFTWARE</h1>
     <h1 class="texto2">DEVELOPER</h1>
     <h1 class="texto3">Meu Email</h1>
 
