--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
             <i class="fa-brands fa-github"></i>
             <h2 class="subtexto2">Github</h2>
         </button>
-            <button type="button" class="botao" onclick="IrParaPagina()">
+            <button type="button" class="botao" onclick="Projetos()">
             <i class="fa-solid fa-file"></i>
             <h2 class="subtexto3">Projetos</h2>
         </button>
